Switch to aosp_atd devices
Ref: https://android-developers.googleblog.com/2021/10/whats-new-in-scalable-automated-testing.html#:~:text=Slimmer%20Emulator%20System%20Images

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -92,8 +92,8 @@ jobs:
 
       - name: Download Android Emulator Image
         run: |
-          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;default;x86_64"
-          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30_AOSP --device pixel --package 'system-images;android-30;default;x86_64'
+          echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;aosp_atd;x86"
+          echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30_AOSP --device pixel --package 'system-images;android-30;aosp_atd;x86'
           $ANDROID_HOME/emulator/emulator -list-avds
 
       - name: Start Android Emulator
