--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -79,7 +79,7 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
-      - name: Start emulator
+      - name: Start emulator and run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           target: aosp_atd
@@ -89,25 +89,6 @@ jobs:
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
           script: yarn detox test --configuration android
-
-      # - name: Download Android Emulator Image
-      #   run: |
-      #     echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install "system-images;android-30;aosp_atd;x86"
-      #     echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd --force --name Pixel_3a_API_30_AOSP --device pixel --package 'system-images;android-30;aosp_atd;x86'
-      #     $ANDROID_HOME/emulator/emulator -list-avds
-      #
-      # - name: Start Android Emulator
-      #   timeout-minutes: 10
-      #   continue-on-error: true
-      #   run: |
-      #     echo "Starting emulator"
-      #     nohup $ANDROID_HOME/emulator/emulator -avd Pixel_3a_API_30_AOSP -no-audio -no-snapshot -no-window &
-      #     $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
-      #     $ANDROID_HOME/platform-tools/adb devices
-      #     echo "Emulator started"
-
-      # - name: Run Detox integration tests
-      #   run: yarn detox test --configuration android
 
       - name: Store Detox artifacts on test failure
         uses: actions/upload-artifact@v3
