--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -79,7 +79,7 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
-      - name: Start emulator and run tests
+      - name: Start emulator and run Detox integration tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
           target: aosp_atd
