Change cache key

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -62,7 +62,7 @@ jobs:
           path: |
             ~/.android/avd/*
             ~/.android/adb*
-          key: avd-30
+          key: avd-30-aosp-atd
 
       - name: Create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
