--- a/package.json
+++ b/package.json
@@ -13,22 +13,22 @@
   "dependencies": {
     "@config-plugins/detox": "1.2.3",
     "@expo/xcpretty": "4.1.1",
-    "@react-native-async-storage/async-storage": "1.17.3",
-    "@react-native-community/masked-view": "0.1.11",
-    "@react-navigation/native": "6.0.10",
-    "@react-navigation/native-stack": "6.6.1",
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.1",
     "expo": "44.0.6",
-    "expo-constants": "13.0.2",
-    "expo-image-picker": "12.0.2",
+    "expo-constants": "~13.0.1",
+    "expo-image-picker": "~12.0.1",
     "expo-splash-screen": "0.14.1",
-    "expo-status-bar": "1.2.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.2",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "2.3.2",
-    "react-native-reanimated": "2.6.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "3.13.1",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
