--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "expo": "44.0.6",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
-    "expo-splash-screen": "0.14.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
-    "react-dom": "17.0.2",
+    "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "7.17.9",
+    "@babel/core": "^7.12.9",
     "detox": "19.6.2",
-    "jest": "27.5.1"
+    "jest": "^26.6.3"
   }
 }
