Install Expo using action

--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -19,8 +19,10 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install Expo CLI
-        run: npm install --global expo-cli
+      - name: Set up Expo
+        uses: expo/expo-github-action@v7
+        with:
+          expo-version: latest
 
       - name: Upgrade packages to latest version supported by Expo SDK
         run: echo y | expo upgrade
