--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -28,6 +28,11 @@ jobs:
       - name: Upgrade packages to latest version supported by Expo SDK
         run: echo y | expo upgrade
 
+      # Jest is managed by Expo SDK version, but we
+      # want the latest version to keep tests stable
+      - name: Upgrade exceptions to managed Expo SDK versions
+        run: yarn upgrade --latest jest
+
       - name: Commit and create PR
         uses: peter-evans/create-pull-request@v4
         with:
