--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "detox": "19.6.2",
-    "jest": "^26.6.3"
+    "jest": "27.5.1"
   }
 }
