--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@config-plugins/detox": "1.2.3",
     "@expo/xcpretty": "4.1.1",
-    "@react-native-async-storage/async-storage": "~1.14.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
@@ -34,6 +34,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "detox": "19.6.2",
-    "jest": "27.5.1"
+    "jest": "^27.5.1"
   }
 }
