--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -31,7 +31,7 @@ jobs:
         uses: bahmutov/npm-install@v1
 
       - name: Upgrade packages to latest version supported by Expo SDK
-        run: echo y | expo upgrade
+        run: expo upgrade
 
       # Jest is managed by Expo SDK version, but we
       # want the latest version to keep tests stable
