Add name to restrict PR merging
Ref: https://stackoverflow.com/a/68613319/1268612

--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    name: Detox Integration Tests - Android
     runs-on: macos-latest
     steps:
       - name: Checkout
