--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
+    name: Detox Integration Tests - iOS
     runs-on: macos-latest
     steps:
       - name: Checkout
