--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -55,7 +55,7 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching"
 
-      - name: Start emulator and run Detox integration tests
+      - name: Start emulator and run Expo dev server
         uses: reactivecircus/android-emulator-runner@v2
         with:
           target: aosp_atd
@@ -64,17 +64,14 @@ jobs:
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
-          script: yarn detox test --configuration android
+          script: |
+            #  Run Expo dev server, redirecting stdout + stderr to log file
+            yarn start --android > expo-start.log 2>&1 &
 
-      - name: Run Expo dev server, redirect stdout + stderr to log file
-        run: |
-          yarn start --android > expo-start.log 2>&1 &
-
-      - name: Race jobs to locate success + error messages in dev server output
-        # Ref: https://superuser.com/a/1074656/157255
-        # Ref: https://unix.stackexchange.com/a/231678/86691
-        run: |
-          { timeout 120 grep -m 1 "Android Bundling complete" <(tail -f expo-start.log); } &
-          { timeout 120 grep -m 1 "Android Bundling failed" <(tail -f expo-start.log) && exit 1; } &
-          wait -n
-          pkill -P $$
+            # Race jobs to locate success + error messages in dev server output
+            # Ref: https://superuser.com/a/1074656/157255
+            # Ref: https://unix.stackexchange.com/a/231678/86691
+            { timeout 120 grep -m 1 "Android Bundling complete" <(tail -f expo-start.log); } &
+            { timeout 120 grep -m 1 "Android Bundling failed" <(tail -f expo-start.log) && exit 1; } &
+            wait -n
+            pkill -P $$
