--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -64,14 +64,4 @@ jobs:
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
-          script: |
-            #  Run Expo dev server, redirecting stdout + stderr to log file
-            yarn start --android > expo-start.log 2>&1 &
-
-            # Race jobs to locate success + error messages in dev server output
-            # Ref: https://superuser.com/a/1074656/157255
-            # Ref: https://unix.stackexchange.com/a/231678/86691
-            { timeout 120 grep -m 1 "Android Bundling complete" <(tail -f expo-start.log); } &
-            { timeout 120 grep -m 1 "Android Bundling failed" <(tail -f expo-start.log) && exit 1; } &
-            wait -n
-            pkill -P $$
+          script: ./scripts/test-expo-dev-server.sh
