Run script in Bash

--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -64,4 +64,6 @@ jobs:
           channel: canary
           profile: pixel
           avd-name: Pixel_3a_API_30_AOSP
-          script: ./scripts/test-expo-dev-server.sh
+          script: |
+            bash --version
+            bash ./scripts/test-expo-dev-server.sh
