Install newer Bash

--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -15,6 +15,13 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Install newer Bash
+        run: |
+          brew install bash
+          bash --version
+          echo "/usr/local/bin" >> $GITHUB_PATH
+          bash --version
+
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
