--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -15,9 +15,9 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Install newer Bash
+      - name: Install newer Bash and coreutils (for timeout)
         run: |
-          brew install bash
+          brew install bash coreutils
 
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
