--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -7,9 +7,10 @@ jobs:
     name: Expo Dev Server Tests
     runs-on: macos-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
       - run: /bin/sh -c ./scripts/test-expo-dev-server.sh
-      # - name: Checkout
-      #   uses: actions/checkout@v3
 
       # - name: Set up Node.js
       #   uses: actions/setup-node@v3
