--- a/.github/workflows/tempworkflow.yml
+++ b/.github/workflows/tempworkflow.yml
@@ -11,8 +11,11 @@ jobs:
         run: |
           brew install bash coreutils
       - run: |
-          { timeout 120 sleep 1 && echo 1st && sleep 20 && echo 'long end'; } &
-          { timeout 120 sleep 3 && echo second && exit 1; } &
+          touch expo-start.log
+          { timeout 120 grep -m 1 "Android Bundling complete" <(tail -f expo-start.log) && echo "Expo dev server start succeeded"; } &
+          { timeout 120 grep -m 1 "Android Bundling failed" <(tail -f expo-start.log) && echo "Expo dev server start failed" && cat expo-start.log && exit 1; } &
+          # { timeout 120 sleep 1 && echo 1st && sleep 20 && echo 'long end'; } &
+          # { timeout 120 sleep 3 && echo second && exit 1; } &
           wait -n
           exit_code=$?
           pkill -P $$
