Add 15-minute timeout to kill hanging jobs

--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -61,6 +61,7 @@ jobs:
 
       - name: Start emulator and run Expo dev server
         uses: reactivecircus/android-emulator-runner@v2
+        timeout-minutes: 15
         with:
           target: aosp_atd
           api-level: 30
