--- a/renovate.json5
+++ b/renovate.json5
@@ -1,5 +1,5 @@
 {
-  extends: ['github>karlhorky/renovate-config'],
+  extends: ['github>karlhorky/renovate-config:default.json5'],
   packageRules: [
     {
       packagePatterns: ['*'],
