--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "6.6.2",
-    "expo": "44.0.6",
+    "expo": "^45.0.0",
     "expo-constants": "~13.0.1",
     "expo-image-picker": "~12.0.1",
     "expo-splash-screen": "~0.14.1",
