--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -38,16 +38,16 @@ jobs:
       # https://github.com/expo/expo/issues/16907#issuecomment-1088809249
       - run: sed -i'' -e 's/kotlinVersion = "1.4.21"/kotlinVersion = "1.6.0"/g' android/build.gradle
 
-      # - name: Install Java JDK
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     distribution: 'temurin'
-      #     java-version: '8'
-
       - name: Install Java JDK
-        run: |
-          brew tap homebrew/cask-versions
-          brew install --cask zulu11
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+
+      # - name: Install Java JDK
+      #   run: |
+      #     brew tap homebrew/cask-versions
+      #     brew install --cask zulu11
 
       - name: Build Android app locally with gradlew
         run: yarn detox build --configuration android
