--- a/.github/workflows/detox-android.yml
+++ b/.github/workflows/detox-android.yml
@@ -38,6 +38,16 @@ jobs:
       - name: Upgrade Kotlin version
         run: sed -i'' -e 's/kotlinVersion = "1.4.21"/kotlinVersion = "1.6.0"/g' android/build.gradle
 
+      # Set up Detox as compiling dependency as
+      # temporary workaround for React Native 0.68
+      # https://wix.github.io/Detox/docs/introduction/android/#setting-detox-up-as-a-compiling-dependency
+      # https://github.com/wix/Detox/issues/3344#issuecomment-1111197955
+      - name: Set up Detox as compiling dependency for React Native 0.68
+        run: |
+          sed -i'' -e 's/rootProject.name = \'hotline-bling-codealong\'/rootProject.name = \'hotline-bling-codealong\'\\\ninclude \':detox\'\\\nproject(\':detox\').projectDir = new File(rootProject.projectDir, \'..\/node_modules\/detox\/android\/detox\')/' android/settings.gradle
+          sed -i'' -e 's/com.wix:detox:+/project(path: ":detox")/' android/app/build.gradle
+          sed -i'' -e 's/defaultConfig {/defaultConfig {\\\n        testBuildType System.getProperty("testBuildType", "debug")\\\n        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"\\\n        missingDimensionStrategy "detox", "full"/' android/app/build.gradle
+
       - name: Install Java JDK
         uses: actions/setup-java@v3
         with:
