--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "detox": "19.6.9",
     "jest": "28.1.0",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "~4.3.5"
   }
 }
