--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "6.6.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
     "expo": "^45.0.0",
     "expo-constants": "~13.1.1",
     "expo-image-picker": "~13.1.1",
