--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.13",
     "@react-navigation/native-stack": "6.9.0",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
-    "expo": "^45.0.0",
-    "expo-constants": "~13.1.1",
-    "expo-image-picker": "~13.1.1",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
+    "expo": "^46.0.0",
+    "expo-constants": "~13.2.4",
+    "expo-image-picker": "~13.3.1",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.5",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@types/jest": "^27.5.1",
     "detox": "19.12.1",
     "jest": "29.0.3",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.3"
   }
 }
