Upgrade macOS on GitHub Actions runners

--- a/.github/workflows/detox-ios.yml
+++ b/.github/workflows/detox-ios.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
     name: Detox Integration Tests - iOS
-    runs-on: macos-latest
+    runs-on: macos-12
     steps:
       - name: Checkout
         uses: actions/checkout@v3
