--- a/package.json
+++ b/package.json
@@ -17,24 +17,24 @@
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.0.13",
     "@react-navigation/native-stack": "6.9.1",
-    "@types/react": "~18.0.0",
-    "@types/react-native": "~0.69.1",
-    "expo": "^46.0.0",
-    "expo-constants": "~13.2.4",
-    "expo-image-picker": "~13.3.1",
-    "expo-splash-screen": "~0.16.2",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "~2.5.0",
-    "react-native-reanimated": "~2.9.1",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
+    "expo": "^47.0.0",
+    "expo-constants": "~14.0.2",
+    "expo-image-picker": "~14.0.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
+    "@babel/core": "^7.19.3",
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.0.2",
     "@ts-safeql/eslint-plugin": "0.0.21",
@@ -42,7 +42,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
+    "@types/react-dom": "~18.0.8",
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@typescript-eslint/parser": "5.42.1",
     "@upleveled/eslint-config-upleveled": "^3.3.9",
@@ -65,7 +65,7 @@
     "jest": "29.3.1",
     "libpg-query": "13.3.0",
     "ts-jest": "^28.0.2",
-    "typescript": "4.8.4"
+    "typescript": "^4.6.3"
   },
   "resolutions": {
     "@typescript-eslint/eslint-plugin": "5.42.1",
