--- a/package.json
+++ b/package.json
@@ -13,28 +13,28 @@
   "dependencies": {
     "@config-plugins/detox": "5.0.1",
     "@expo/xcpretty": "4.2.2",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "0.1.11",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.9.12",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
-    "expo": "^47.0.11",
-    "expo-constants": "~14.0.2",
-    "expo-image-picker": "~14.0.2",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7"
+    "expo": "^48.0.0",
+    "expo-constants": "~14.2.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.20.0",
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.0.2",
     "@ts-safeql/eslint-plugin": "0.0.21",
@@ -42,7 +42,7 @@
     "@types/jest": "^27.5.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
-    "@types/react-dom": "~18.0.8",
+    "@types/react-dom": "~18.0.10",
     "@typescript-eslint/eslint-plugin": "5.42.1",
     "@typescript-eslint/parser": "5.42.1",
     "@upleveled/eslint-config-upleveled": "^3.3.9",
@@ -65,7 +65,7 @@
     "jest": "29.4.3",
     "libpg-query": "13.3.0",
     "ts-jest": "^28.0.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@typescript-eslint/eslint-plugin": "5.42.1",
