--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: '16'
 
+      - name: Install Expo CLI
+        run: npm install --global expo-cli
+
       - name: Install deps and build (with cache)
         uses: bahmutov/npm-install@v1
 
@@ -32,7 +35,7 @@ jobs:
         run: echo "::set-output name=version::$(yq '.devDependencies.jest' package.json)"
 
       - name: Upgrade packages to latest version supported by Expo SDK
-        run: npx expo-cli@latest upgrade
+        run: expo upgrade
 
       - name: Fix any incorrect dependency versions
         run: yarn expo doctor --fix-dependencies
