--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -38,7 +38,10 @@ jobs:
         run: expo upgrade
 
       - name: Fix any incorrect dependency versions
-        run: npx expo-doctor --fix-dependencies
+        run: npx expo install --fix
+
+      - name: Diagnose any problems
+        run: npx expo-doctor
 
       # Jest is managed by Expo SDK version, but we
       # want to manage the version to keep tests stable
