Add workaround to fix Android build

--- a/app.json
+++ b/app.json
@@ -32,6 +32,6 @@
       "backgroundColor": "#000000",
       "barStyle": "light-content"
     },
-    "plugins": ["@config-plugins/detox"]
+    "plugins": ["@config-plugins/detox", "./sdk48AndroidNamespaceWorkaround"]
   }
 }
