--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -20,9 +20,9 @@ jobs:
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 'lts/*'
 
       - name: Install Expo CLI
         run: npm install --global expo-cli
