--- a/.github/workflows/expo-start-android.yml
+++ b/.github/workflows/expo-start-android.yml
@@ -11,9 +11,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
+          node-version: 'lts/*'
 
       - name: Install newer Bash and coreutils (for timeout)
         run: |
