--- a/.github/workflows/lint-check-types.yml
+++ b/.github/workflows/lint-check-types.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: 'lts/*'
       - run: yarn --frozen-lockfile
       - run: yarn eslint . --max-warnings 0
       - run: yarn tsc
