--- a/.github/workflows/cron-expo-install-new-versions.yml
+++ b/.github/workflows/cron-expo-install-new-versions.yml
@@ -11,6 +11,7 @@ jobs:
   build:
     name: Upgrade Expo packages
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     steps:
       - uses: actions/checkout@v3
         # To trigger further `on: [push]` workflow runs
