--- a/.github/workflows/lint-check-types.yml
+++ b/.github/workflows/lint-check-types.yml
@@ -5,6 +5,7 @@ jobs:
   build:
     name: Lint, Check Types, Jest
     runs-on: ubuntu-latest
+    timeout-minutes: 45
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
