--- a/package.json
+++ b/package.json
@@ -45,5 +45,10 @@
     "jest": "29.7.0",
     "ts-jest": "^28.0.2",
     "typescript": "^5.3.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "globals": "13.24.0"
+    }
   }
 }
